Add a genre parameter to the random command.