@@ -2,17 +2,14 @@ package fr.zenigata.command;
 
 import java.util.List;
 
-import com.sybit.airtable.Query;
 import com.sybit.airtable.exception.AirtableException;
 
 import org.apache.http.client.HttpResponseException;
 import org.reactivestreams.Publisher;
 
 import discord4j.core.event.domain.message.MessageCreateEvent;
-import fr.zenigata.Bot;
-import fr.zenigata.CommandManager;
 import fr.zenigata.data.Fiction;
-import fr.zenigata.query.FindFictionByNameQuery;
+import fr.zenigata.util.QueryUtils;
 import fr.zenigata.util.SpecUtils;
 
 public class FindFictionCommand implements Command {
@@ -25,12 +22,11 @@ public class FindFictionCommand implements Command {
   @Override
   public Publisher<?> execute(MessageCreateEvent event, String parameter)
       throws HttpResponseException, AirtableException {
-    if (parameter == null || parameter.trim().isEmpty()) {
+    if (parameter == null || parameter.isBlank()) {
       return SpecUtils.displayError(event.getMessage(), "Indiquez le nom de la fiction à afficher.");
     }
 
-    Query query = new FindFictionByNameQuery(parameter);
-    List<Fiction> found = CommandManager.getInstance().getBase().table(Bot.TABLE_FICTION, Fiction.class).select(query);
+    List<Fiction> found = QueryUtils.findFictionWithName(parameter);
 
     if (found.size() == 0) {
       return SpecUtils.displayError(event.getMessage(), "Aucune fiction ne contient *" + parameter
